# quick_drf

./: .env  README.md  manage.py  pyproject.toml
quick_drf/: asgi.py  pagination.py  permissions.py  settings.py  urls.py  wsgi.py
